--- a/modules/1237/pages/doc2-overview.adoc
+++ b/modules/1237/pages/doc2-overview.adoc
@@ -9,23 +9,24 @@
 
 == The Land Assignment Report
 
-After the Cammer reviewed Krückeberg's petition (Document 1), they commissioned a Forestry Office assessment, which
-was drafted onto Document 1. It concluded the enlargement of Krückeberg's garden and farmyard would have no
-detimental impact. Some poplars would need to be removed and sold by the forestry office, and Krückeberg would be
-obligated to replant three saplings in another area of the forest as replacements.
+After the Cammer reviewed Krückeberg's petition (Document 1), on May 30, 1799, they commissioned a Forestry Office
+assessment, which was drafted onto Document 1. It concluded the enlargement of Krückeberg's garden and farmyard
+would have no detimental impact. Some poplars would need to be removed and sold by the forestry office, and
+Krückeberg would be obligated to replant three saplings in another area of the forest as replacements.
 
-With this guidance from the Cammer, the Ämter(plural of Amt) prepared Document 2 in March 1799 to inform the Cammer that
-they had reviewed the forestry report, and that only one Berenbusch resident named Weiland raised objections — which
-the Ämter dismissed as without merit.
+It was not until February, 1799, though, that the Cammer returned Document 1 to the Ämter(plural of Amt). With the
+new guidance from the Cammer, the Ämter prepared Document 2 in March 1799 to inform the Cammer that they had
+reviewed the forestry report, and that locally only one Berenbusch resident named Weiland raised objections —
+which the Ämter dismissed as without merit.
 
 === Cammer's Official Response
 
 The "main text", the larger text on the page, is the *The Land Assignment Report* issued by the *Ämter Bückeburg
 und Arensburg* (local adminstrative offices of Bückeburg and Arenburg).
 
-The *marginal note*, the darker, somewhat smaller text on the left, is a response to the remitted report, but not a
-formal reply addressed to Krückeberg. It is an internal instruction, filed with the main document for reference and
-action.  It is a reaction from the higher office (the Kammer), giving administrative directives:
+The *marginal note*, the darker, somewhat smaller text on the left, is the Cammer'ss response to the remitted
+report, but not a formal reply addressed to Krückeberg. It is an internal instruction, filed with the main document
+for reference and action.  It is a reaction from the higher office (the Kammer), giving administrative directives:
 
 * Approving the allocation of the parcel (so Krückeberg’s request is likely approved).
 
