--- a/modules/1237/pages/doc3.adoc
+++ b/modules/1237/pages/doc3.adoc
@@ -142,14 +142,12 @@ to the officials in Bückeburg
                   smallholder Krückeberg No. 10
                   in Berenbusch shall be
                   allocated the requested plot
-                  of land located in the village
-                  street there, next to his
-                  garden, for the purpose of
-                  expansion, under the
-                  condition that the willows
-                  and poplars standing on it,
-                  having been sold by
-                  Our Forestry Department
+                  of land located in [or adjacent to]
+                  the village street there, next to his
+                  garden, for the purpose of expansion,
+                  under the condition that the willows
+                  and poplars standing on it, having been
+                  sold by Our Forestry Department
 [signed] Schwarze
                   be removed, and that
                   the colonist Krückeberg
