--- a/modules/1237/pages/doc2-official-reaction.adoc
+++ b/modules/1237/pages/doc2-official-reaction.adoc
@@ -6,8 +6,9 @@ Assignment Report], but not a formal reply addressed to Krückeberg. It is an in
 filed with the main document for reference and action. It is a reaction from the higher office (the
 Kammer), giving administrative directives:
 
-* Approving the allocation of the parcel (so Krückeberg’s request is likely approved).  Instructing the local
-* officials to investigate other possibly unauthorized garden expansions in Berenbusch and to report back.
+* Approving the allocation of the parcel (so Krückeberg’s request is likely approved).
+* Instructing the local officials to investigate other possibly unauthorized garden expansions in Berenbusch and
+to report back.
 
 It was written vertically in the left margin the Land Assignment report and encroaches on its text. To aid
 readability, the text of the Land Assigment Report has been erased from the image below:
