--- a/modules/1237/pages/doc3.adoc
+++ b/modules/1237/pages/doc3.adoc
@@ -134,32 +134,24 @@ Regarding No. 53 from the Chamber (as noted above)
 Draft of Chamber Directive
 to the officials in Bückeburg
 
-                  Very Gracious Lords,
-                  In response to your report
-                  submitted to Our Office on
-                  February 27 of this year, We
-                  have resolved that the
-                  smallholder Krückeberg No. 10
-                  in Berenbusch shall be
-                  allocated the requested plot
-                  of land located in [or adjacent to]
-                  the village street there, next to his
+                  Very Gracious Lords, In response to
+                  your report submitted to Our Office
+                  on February 27 of this year, We have
+                  resolved that the smallholder Krückeberg No.
+                  10 in Berenbusch shall be allocated the
+                  requested plot of land located in [or adjacent
+                  to] the village street there, next to his
                   garden, for the purpose of expansion,
                   under the condition that the willows
                   and poplars standing on it, having been
                   sold by Our Forestry Department
 [signed] Schwarze
-                  be removed, and that
-                  the colonist Krückeberg
-                  is obligated to replant
-                  three saplings for every
-                  felled poplar or willow tree
-                  at another site in the forest.
-                  You are therefore to inform
-                  him of this, and that he is
-                  to pay 24 Mariengroschen per
-                  square rod for the plot
-                  to be transferred to him‡.
+                  be removed, and that the colonist Krückeberg
+                  is obligated to replant three saplings for
+                  every felled poplar or willow tree at another
+                  site in the forest.  You are therefore to inform
+                  him of this, and that he is to pay 24 Mariengroschen
+                  per square rod for the plot to be transferred to him‡.
 ‡in this manner
                   If he agrees to this,
                   then you shall, in the
