--- a/modules/1237/pages/doc3.adoc
+++ b/modules/1237/pages/doc3.adoc
@@ -124,8 +124,7 @@ Espp: Schwarze
 
 
 
-
-                  Wippermann
+Wippermann
 ____
 |
 [verse]
@@ -152,21 +151,17 @@ to the officials in Bückeburg
                   site in the forest.  You are therefore to inform
                   him of this, and that he is to pay 24 Mariengroschen
                   per square rod for the plot to be transferred to him‡.
-‡in this manner
-                  If he agrees to this,
-                  then you shall, in the
-                  presence of the forester
-                  Talkmann, and with
-                  consideration for the access
-                  road needed by the colonist
-                  Weiland, No. 1 in Berenbusch,
-                  have the plot surveyed
-                  by a sworn surveyor, and
-                  report its size in square
-                  rods to us. We remain
+‡in this manner 
+                  If he agrees to this, then you shall, in
+                  the presence of the forester Talkmann,
+                  and with consideration for the access
+                  road needed by the colonist Weiland, No.
+                  1 in Berenbusch, have the plot surveyed
+                  by a sworn surveyor, and report its size
+                  in square rods to us. We remain
                   favorably disposed toward you.
-                  Bückeburg, March 11, 1799.
-                  In place of "per procurationem"
+                  Bückeburg, March 11, 1799.  In place of
+                  "per procurationem"
 
                   Hering         Riehe         Mkaas
                   Emmerwarth     v. Landesberg
