--- a/todo.adoc
+++ b/todo.adoc
@@ -1,9 +1,10 @@
 = TODO
 
-1. Add more detail to doc-1-forestry-assessment.adoc taken from doc1-overview.adoc, its narraitive overview.
+1. Add more detail to doc-1-forestry-assessment.adoc. Take it from doc1-overview.adoc's narraitive overview.
 2. See the "TODO" section I added (From chatgpt). It is not yet part of timeline.adoc.
-3. Start on doc3 overview and finish doc3.
-4. Then doc4, doc5, doc6--also adding each time to the time line.
+3. Finish doc3-overview
+4. Update the timeline. I added a TODO block to it. Mkae sure it has doc2 events. And after completing doc3-overview, add doc3 events
+4. Then after finishing doc4, doc5, doc6, add their events to the time line.
 
 * Make sure the glossaries are right for each page.
 * https://docs.antora.org/assembler/latest/ shows how to setup PDF generation
