--- a/modules/1237/pages/doc2-overview.adoc
+++ b/modules/1237/pages/doc2-overview.adoc
@@ -14,7 +14,7 @@ assessment, which was drafted onto Document 1. It concluded the enlargement of K
 would have no detimental impact. Some poplars would need to be removed and sold by the forestry office, and
 Krückeberg would be obligated to replant three saplings in another area of the forest as replacements.
 
-It was not until February, 1799, though, that the Cammer returned Document 1 to the Ämter(plural of Amt). With the
+But it was not until February, 1799, though, that the Cammer returned Document 1 to the Ämter(plural of Amt). With the
 new guidance from the Cammer, the Ämter prepared Document 2 in March 1799 to inform the Cammer that they had
 reviewed the forestry report, and that locally only one Berenbusch resident named Weiland raised objections —
 which the Ämter dismissed as without merit.
