--- a/modules/1237/pages/doc2-overview.adoc
+++ b/modules/1237/pages/doc2-overview.adoc
@@ -10,9 +10,9 @@
 == Recapitulation: Cammer sends Forestry Office Assessment to Ämter (February 18, 1799)
 
 After the Cammer reviewed Krückeberg's petition (Document 1), on May 30, 1799, they commissioned a Forestry Office
-assessment, which was drafted onto Document 1. It concluded the enlargement of Krückeberg's garden and farmyard
-would have no detimental impact. Some poplars would need to be removed and sold by the forestry office, and
-Krückeberg would be obligated to replant three saplings in another area of the forest as replacements.
+assessment, which was drafted onto Document 1, on 27 February 1799. It concluded the enlargement of Krückeberg's
+garden and farmyard would have no detimental impact. Some poplars would need to be removed and sold by the forestry
+office, and Krückeberg would be obligated to replant three saplings in another area of the forest as replacements.
 
 But it was not until February 18, 1799, though, that the Cammer returned Document 1 to the Ämter (offices) of
 Bückeburg and Arensberg.
