--- a/modules/1237/pages/doc2-overview.adoc
+++ b/modules/1237/pages/doc2-overview.adoc
@@ -20,7 +20,7 @@ Bückeburg and Arensberg.
 == The Land Assignment Report (27 Feb 1799)
 
 With the new guidance from the Cammer, the Ämter prepared Document 2, on March, 1799, to inform the Cammer that they had
-reviewed the forestry report, and that locally only one Berenbusch resident named Weiland raised objections —
+reviewed the forestry report, and to report that locally only one Berenbusch resident named Weiland raised objections —
 which the Ämter dismissed as without merit.
 
 The "main text", the larger text on the page, is the *The Land Assignment Report* issued by the *Ämter Bückeburg
