--- a/modules/1237/pages/doc2-overview.adoc
+++ b/modules/1237/pages/doc2-overview.adoc
@@ -7,7 +7,7 @@
 |image::04-left-page.png[scale=25,title="Land Assignment Report",link=self]
 |===
 
-== Recapitulation: Cammer sends Forestry Office Assessment to Ämter (February 18, 1799)
+== Recapitulation: Cammer had sent Forestry Office Assessment to Ämter (February 18, 1799)
 
 After the Cammer reviewed Krückeberg's petition (Document 1), on May 30, 1799, they commissioned a Forestry Office
 assessment, which was drafted onto Document 1 on February 27, 1799. It concluded the enlargement of Krückeberg's
