--- a/modules/1237/pages/doc2-overview.adoc
+++ b/modules/1237/pages/doc2-overview.adoc
@@ -28,7 +28,7 @@ und Arensburg* (local adminstrative offices of Bückeburg and Arenburg).
 
 === Cammer's Reactiion (10 Mar 1799)
 
-The *marginal note*, the darker, somewhat smaller text on the left, is the Cammer's response to the remitted
+The *marginal note*, the darker, somewhat smaller text on the left side, is the Cammer's response to the remitted
 report, but not a formal reply addressed to Krückeberg. It is an internal instruction, filed with the main document
 for reference and action.  It is a reaction from the higher office (the Kammer), giving administrative directives:
 
