--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -70,15 +70,20 @@ STARTS HERE ==>
 
 1. **29 May 1798 – Petition Written by the Amt**
 +
-Jobst Heinrich Krückeberg appears at the Amt in Bückeburg. Lindemann, an official there, transcribes Krückeberg’s request to purchase adjacent plots of land for garden and farmyard expansion. This handwritten petition forms the original basis of Document 1.
+Jobst Heinrich Krückeberg appears at the Amt in Bückeburg. Lindemann, an official there, transcribes Krückeberg’s
+request to purchase adjacent plots of land for garden and farmyard expansion. This handwritten petition forms the
+original basis of Document 1.
 
 2. **30 May 1798 – Petition Presented to the Vormundschaftliche Cammer**
 +
-The petition is submitted to the Cammer. The header "praes: 30 May 1798" is entered on the document, indicating the date of presentation to the Cammer. This marks the beginning of Cammer-level processing.
+The petition is submitted to the Cammer. The header "praes: 30 May 1798" is entered on the document, indicating the
+date of presentation to the Cammer. This marks the beginning of Cammer-level processing.
 
 3. **14 June 1798 – Forestry Office Assessment Added**
 +
-The Cammer consults the Forestry Office for an evaluation of the land request. The forestry official MKaas writes an assessment directly onto the petition. This assessment is dated "B. 14. Jun. 1798" and signed "MKaas Forstamt." It becomes the large body of text on the left side of Document 1.
+The Cammer consults the Forestry Office for an evaluation of the land request. The forestry official MKaas writes
+an assessment directly onto the petition. This assessment is dated "B. 14. Jun. 1798" and signed "MKaas Forstamt."
+It becomes the large body of text on the left side of Document 1.
 
 4. **18 February 1799 – Document Hand-Delivered Back to the Amt**
 +
@@ -91,7 +96,8 @@ Amts zum Berichte. B. 18
 Febr 1799   MKaas  
 ____
 +
-This indicates that the Cammer’s directive (Res Cam.) was physically returned ("brevi manu") to the Amt to obtain their formal written report.
+This indicates that the Cammer’s directive (Res Cam.) was physically returned ("brevi manu") to the Amt to obtain
+their formal written report.
 
 5. **After 18 Feb 1799 – Amt Bückeburg and Arensburg Compose Document 2**
 +
@@ -103,7 +109,9 @@ In response to the Cammer’s directive, the two Aemter draft Document 2. This d
 
 ==== 🧩 Conclusion
 
-Document 1 evolved from a single petition into a composite case document containing both the petition and the official assessment. It was sent back and forth between the Amt and the Cammer, gaining administrative annotations and directives along the way. This explains the layered handwriting and content from multiple officials.
+Document 1 evolved from a single petition into a composite case document containing both the petition and the
+official assessment. It was sent back and forth between the Amt and the Cammer, gaining administrative annotations
+and directives along the way. This explains the layered handwriting and content from multiple officials.
 <== ENDS HERE
 
 include::partial$timeline.adoc[]
