--- a/modules/1237/partials/timeline.adoc
+++ b/modules/1237/partials/timeline.adoc
@@ -20,11 +20,19 @@
     }
 
     .timeline-entry p {
-      margin: 0;
+      margin: 0 0 0.5em 0;
       color: #1f2937;
     }
-  </style>
 
+    .timeline-entry blockquote {
+      margin: 0.5em 0;
+      padding: 0.5em 1em;
+      background-color: #e0e7ff;
+      border-left: 4px solid #3b82f6;
+      font-style: italic;
+      color: #374151;
+    }
+  </style>
   <div class="timeline-entry">
     <h4>29 May 1798</h4>
     <p>Jobst Heinrich Krückeberg appears at the Amt in Bückeburg. Lindemann, an official there, transcribes Krückeberg’s
