--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -105,7 +105,7 @@ In response to the Cammer’s directive, the two Aemter draft Document 2. This d
 +
 * A cover report addressed to the Cammer
 * A statement that the original petition is enclosed again
-* A summary of public opinion—only one objection is raised (by the Köter in Berenbusch)
+* A summary of public opinion—only one objection is raised (by the Köter Weiland in Berenbusch)
 
 ==== 🧩 Conclusion
 
