--- a/modules/1237/partials/timeline.adoc
+++ b/modules/1237/partials/timeline.adoc
@@ -94,8 +94,8 @@ Weiland in Berenbusch)</li>
     <h4>10 March 1799</h4>
     <p>The Cammer's reaction is noted on Document 2:</p>
     <ul>
-      <li>they will allocte the land to Krückeberg, and</li>
-      <li>they instruct the Amt to investiage individuals who have enlarge their gardens withbout apporval.</li>
+      <li>they will allocate the land to Krückeberg, and</li>
+      <li>they instruct the Amt to investiage individuals who have enlarged their gardens withbout approval.</li>
     </div>
 
   <div class="timeline-entry">
