--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -13,7 +13,7 @@ Fürstin::
 Princess, female ruler (of Schaumburg-Lippe)
 
 Graf::
-Graf is German for Count: the Count of Schaumburg-Lippe
+Graf means Count, the Count of Schaumburg-Lippe
 
 Lieutenant Funck::
 A *sworn land surveyor* who will measure two parcels of ground and who drawing and report will supplement
