--- a/modules/1237/pages/timeline.adoc
+++ b/modules/1237/pages/timeline.adoc
@@ -99,17 +99,17 @@ NOTE: Not complete
 
 |27 February 1799
 |*Report from the Bückeburg Amt* +
-(Document Index No. 2)
+(Document No. 2)
 |The Amt responds to the Cammer, providing additional details or confirmation of the earlier assessment.
 
 |11 March 1800
 |*Draft Chamber Instruction* to the Amt +
-(Document Index No. 3)
+(Document No. 3)
 |The Cammer drafts instructions, likely directing the Amt to proceed with the necessary arrangements (surveying, documentation, etc.).
 
 |18 October 1800
 |*Follow-up Report by Amt* +
-(Document Index No. 4)
+(Document No. 4)
 |Further status report, perhaps in response to the March instruction. Indicates ongoing administrative steps.
 
 |[Undated, c. Oct 1800]
