--- a/modules/1237/pages/doc2-overview.adoc
+++ b/modules/1237/pages/doc2-overview.adoc
@@ -19,7 +19,7 @@ office, and Krückeberg would be obligated to replant three saplings in another 
 But it was not until February 18, 1799, though, that the Cammer returned Document 1 to the Ämter (offices) of
 Bückeburg and Arensberg.
 
-=== 2. The Land Assignment Report (27 Feb 1799)
+=== 2. Ämter Compose the Land Assignment Report (27 Feb 1799)
 
 With the new guidance from the Cammer, the Ämter prepared Document 2, on March, 1799, to inform the Cammer that they had
 reviewed the forestry report, and to report that locally only one Berenbusch resident named Weiland raised objections —
