--- a/modules/1237/pages/doc2-overview.adoc
+++ b/modules/1237/pages/doc2-overview.adoc
@@ -28,7 +28,7 @@ which the Ämter dismissed as without merit.
 The "main text", the larger text on the page, is the *The Land Assignment Report* issued by the *Ämter Bückeburg
 und Arensburg* (local adminstrative offices of Bückeburg and Arenburg).
 
-=== 3. Cammer's Reaction (10 Mar 1799)
+=== 3. Cammer's Reaction to Document 2 (10 Mar 1799)
 
 The *marginal note*, the darker, somewhat smaller text on the left side, is the Cammer's response to the remitted
 report, but not a formal reply addressed to Krückeberg. It is an internal instruction, filed with the main document
